--- a/index.html
+++ b/index.html
@@ -170,6 +170,10 @@
         WhatsApp uniquement :
         <a class="contact-number" href="https://wa.me/+241065833080" target="_blank">065-83-30-80</a>
       </div>
+      <div>
+        <p>Vous aurez votre propre compte Netflix et vous serez les seuls à y avoir accès.</p>
+        <p>Vous ne devez en aucun cas partagez votre compte, ni de créer un second profil ❌</p>
+      </div>
     </section>
     <section class="procedure-section">
       <h1>Procédure</h1>
