--- a/index.html
+++ b/index.html
@@ -194,6 +194,10 @@
       <h1>Procédure</h1>
       <p>Nous vous expliquons plus en détail comment procéder :</p>
 
+      <p>
+        <strong style="color: yellow;">NB:</strong> Envoyez les sous <strong style="color:red;">UNIQUEMENT</strong> via un <strong style="color:yellow">CODE AGENT ✅</strong>
+      </p>
+
       <form action="">
         <p>Vous êtes priés d'effectuer le dépôt avec les frais inclus. ⚠</p>
         <p>Numéro AirtelMoney pour réabonnement :</p>
