--- a/index.html
+++ b/index.html
@@ -176,6 +176,29 @@
       </div>
     </section>
     <section class="container">
+      <h1>Tentez de gagner de l'argent avec notre service</h1>
+      <p>
+        Nous mettons en jeu, votre savoir-faire.
+        Tentez de gagner de l'argent en nous faisant de la publicité 💹 
+      </p>
+      <p>
+        Que devez-vous faire ? <br>
+        Si vous réussissez à nous apporter de la clientèle, vous aurez la chance de gagner de l'argent 💰.
+      </p>
+      <p>
+        Procédure : <br>
+        Une fois que vous nous emmenez un client, vous gagner 600F CFA. Envoyez-nous une capture pour prouver que vous êtes
+        bien la personne responsable de la venue du client. <br>
+        
+        Avant de percevoir votre compensation, le client doit avoir
+        fini de payer son abonnement chez nous, une fois terminé, nous reviendrons vers vous
+        afin de vous confirmer que le client a été enregistré et que nous sommes sur le point de vous compenser 💰💹
+      </p>
+      <p>
+        Ne négligez pas, avec 10 clients, vous avez 7000F CFA. Sautez sur cette occasion.
+      </p>
+    </section>
+    <section class="container">
       <div class="logo">
         <img src="Amazon-prime-video-logo-png-transparent-removebg-preview.png" alt="Prime video logo">
       </div>
