--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       </p>
       <p>
         Procédure : <br>
-        Une fois que vous nous emmenez un client, vous gagner 600F CFA. Envoyez-nous une capture pour prouver que vous êtes
+        À chaque client apporté, vous gagner 600F CFA. Envoyez-nous une capture pour prouver que vous êtes
         bien la personne responsable de la venue du client. <br>
         
         Avant de percevoir votre compensation, le client doit avoir
