--- a/index.html
+++ b/index.html
@@ -177,13 +177,20 @@
     </section>
     <section class="container">
       <h1>Tentez de gagner de l'argent avec notre service</h1>
+      <p> Gagnez de l’argent en partageant notre service !</p>
       <p>
-        Nous mettons en jeu, votre savoir-faire.
-        Tentez de gagner de l'argent en nous faisant de la publicité 💹 
+        Rejoignez notre programme de parrainage et transformez vos recommandations en gains.<br>
+        Voici comment procéder :
       </p>
       <p>
-        Que devez-vous faire ? <br>
-        Si vous réussissez à nous apporter de la clientèle, vous aurez la chance de gagner de l'argent 💰.
+        <ol>
+          <li>Apportez-nous de nouveaux clients. Pour chaque nouveau client que vous nous référez, et qui finalise son inscription, vous gagnez 600 CFA.</li>
+          <li>Nous confirmons le paiement. Une fois que le client a complété son paiement chez nous, nous procédons à la vérification.</li>
+          <li>Recevez votre paiement. Après confirmation du paiement complet du client, nous vous transférerons la somme due directement.</li>
+        </ol>
+      </p>
+      <p>
+        Ne laissez pas passer cette opportunité ! Avec 10 clients parrainés, vous gagnez 7000 CFA. Commencez dès maintenant et maximisez vos revenus avec nous !
       </p>
       <p>
         Procédure : <br>
