--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       </div>
     </section>
     <section class="container">
-      <h1>Tentez de gagner de l'argent avec notre service</h1>
+      <h1>Rémunération</h1>
       <p> Gagnez de l’argent en partageant notre service !</p>
       <p>
         Rejoignez notre programme de parrainage et transformez vos recommandations en gains.<br>
