--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         padding: 0;
       }
       .container {
-        background-color: rgba(0, 0, 0, 0.8);
+        background-color: rgb(0, 0, 0);
         padding: 50px;
         border-radius: 15px;
         display: inline-block;
